# Quiz_System

./: AvailableQuizzes.h  CMakeLists.txt  CreateNewQuiz.h  DeleteQuiz.h  DeletedQuizzes.txt  EditDraftQuiz.h  Global.h  HeaderScreen.h  Input.h  LICENSE  Last Version.sln  Last Version.vcxproj  Last Version.vcxproj.filters  Login.h  MainMenu.h  Person.h  PreviousResults.h  PublishQuiz.h  PublishedQuizzes.txt  Quiz System.cpp  Quiz.h  README.md  Register.h  ReviewSolvedQuiz.h  SolvedQuiz.h  SolvedQuizzes.txt  StartNewQuiz.h  Student.h  StudentLogin.h  Students.txt  StudnetMainMenu.h  StudnetRegister.h  Teacher.h  TeacherLogin.h  TeacherMainMenu.h  TeacherRegister.h  Teachers.txt  Util.h  main.cpp
Login/include/: Login.h  LoginActionCleaner.h  LoginActionFactory.h  LoginActionPerformer.h  LoginMenuReseter.h  LoginOptions.h  PersonLogin.h  StudentLogin.h  TeacherLogin.h
Login/src/: Login.cpp  LoginActionCleaner.cpp  LoginActionFactory.cpp  LoginActionPerformer.cpp  LoginMenuReseter.cpp  StudentLogin.cpp  TeacherLogin.cpp
MainMenu/include/: MainAction.h  MainActionCleaner.h  MainActionFactory.h  MainActionPerformer.h  MainMenu.h  MainMenuChoices.h  MainMenuReseter.h
MainMenu/src/: MainActionCleaner.cpp  MainActionFactory.cpp  MainActionPerformer.cpp  MainMenu.cpp  MainMenuReseter.cpp
Misc/include/: Global.h  Input.h  ScreenHeader.h  Util.h
Misc/src/: Global.cpp  Input.cpp  ScreenHeader.cpp  Util.cpp
Person/include/: Person.h  PersonCleaner.h
Person/src/: Person.cpp  PersonCleaner.cpp
Question/include/: Question.h  QuestionFormatter.h  QuestionInputForm.h
Question/src/: Question.cpp  QuestionFormatter.cpp  QuestionInputForm.cpp
Quiz/include/: Quiz.h  QuizCleaner.h  QuizFileManger.h  QuizFormatter.h  QuizInputForm.h  QuizPrinter.h
Quiz/src/: Quiz.cpp  QuizCleaner.cpp  QuizFileManger.cpp  QuizFormatter.cpp  QuizInputForm.cpp  QuizPrinter.cpp
Register/include/: PersonRegister.h  Register.h  RegisterActionCleaner.h  RegisterActionFactory.h  RegisterActionPerformer.h  RegisterChoices.h  RegisterMenuReseter.h  StudentRegister.h  TeacherRegister.h
Register/src/: Register.cpp  RegisterActionCleaner.cpp  RegisterActionFactory.cpp  RegisterActionPerformer.cpp  RegisterMenuReseter.cpp  StudentRegister.cpp  TeacherRegister.cpp
Solved Quiz/include/: SolvedQuiz.h  SolvedQuizFormatter.h  SolvedQuizRepository.h
Solved Quiz/src/: SolvedQuiz.cpp  SolvedQuizFormatter.cpp  SolvedQuizRepository.cpp
Student Main Choices/include/: AvailableQuizzes.h  PreviousResults.h  ReviewSolvedQuiz.h  StartNewQuiz.h
Student Main Choices/src/: AvailableQuizzes.cpp  PreviousResults.cpp  ReviewSolvedQuiz.cpp  StartNewQuiz.cpp
Student/include/: Student.h  StudentCleaner.h  StudentFileManger.h  StudentFormatter.h  StudentInputForm.h  StudentMainMenu.h  StudentMainMenuChoices.h
Student/src/: Student.cpp  StudentCleaner.cpp  StudentFileManger.cpp  StudentFormatter.cpp  StudentInputForm.cpp  StudentMainMenu.cpp
StudentAction/include/: StudentAction.h  StudentActionCleaner.h  StudentActionFactory.h  StudentActionPerformer.h  StudentMenuReseter.h
StudentAction/src/: StudentActionCleaner.cpp  StudentActionFactory.cpp  StudentActionPerformer.cpp  StudentMenuReseter.cpp
Teacher/include/: Teacher.h  TeacherCleaner.h  TeacherFileManger.h  TeacherFormatter.h  TeacherInputForm.h  TeacherMainMenu.h
Teacher/src/: Teacher.cpp  TeacherCleaner.cpp  TeacherFileManger.cpp  TeacherFormatter.cpp  TeacherInputForm.cpp  TeacherMainMenu.cpp
TeacherAction/include/: TeacherAction.h  TeacherActionCleaner.h  TeacherActionFactory.h  TeacherActionPerformer.h  TeacherMainChoices.h  TeacherMenuReseter.h
TeacherAction/src/: TeacherActionCleaner.cpp  TeacherActionFactory.cpp  TeacherActionPerformer.cpp  TeacherMenuReseter.cpp
TeacherMainChoices/include/: CreateNewQuiz.h  DeleteQuiz.h  (+2 more)
Text Files/: PublishedQuizzes.txt  SolvedQuizzes.txt  Students.txt  Teachers.txt
(+4 files in other folders)
